# svr

./: CMakeLists.txt  COPYING  test.sh  vidfiletest.sh
lib/: CMakeLists.txt
python/: CMakeLists.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  start-svrd-continuation.py  test.sh  vidfiletest.py  vidfiletest.sh
tests/libtests/: CMakeLists.txt  simple.c  simple.sh  stream_resize  stream_resize.c  stream_resize.sh
util/: CMakeLists.txt  svrrecord.c  svrwatch.c
